<resources>
    <!--The string resources used in the stopwatch app-->
    <string name="app_name">StopWatch</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="dsec">0</string>
    <string name="sec">00</string>
    <string name="min">00</string>
    <string name="colon"><b>:</b></string>
    <string name="dot"><b>.</b></string>
</resources>
