<?xml version="1.0" encoding="utf-8"?>

<!--Main layout container-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <!--Image container with stopwatch icon-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:cropToPadding="true"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_svgstopwatch" />

        <!--Layout container with "time-elapsed" text views-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/ll_display">

            <TextView
                android:id="@+id/tv_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:textSize="70sp"
                android:textColor="@color/colorAccentDarker"
                android:text="@string/min" />

            <TextView
                android:id="@+id/colon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:textSize="50sp"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tv_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:textSize="70sp"
                android:textColor="@color/colorAccentDark"
                android:text="@string/sec" />

            <TextView
                android:id="@+id/colon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:textSize="50sp"
                android:text="@string/dot" />

            <TextView
                android:id="@+id/tv_dsec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:textSize="70sp"
                android:textColor="@color/colorAccent"
                android:text="@string/dsec" />

        </LinearLayout>

        <!--Layout container for button views-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start"
                    android:id="@+id/bt_start"
                    android:textSize="15sp"
                    android:theme="@style/SpecialButtonTheme"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop"
                    android:id="@+id/bt_stop"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resume"
                    android:id="@+id/bt_resume"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    android:id="@+id/bt_reset"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>